// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: perspectiveCamera far prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        perspective
      </option>
    </select>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Near : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0.1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Far : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="10.112"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Aspect : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Fovy : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="60"
      />
    </article>
  </article>
</article>
`;

exports[`redo_undo: perspectiveCamera far prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        perspective
      </option>
    </select>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Near : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0.1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Far : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="123.12"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Aspect : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Fovy : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="60"
      />
    </article>
  </article>
</article>
`;

exports[`redo_undo: perspectiveCamera far prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        perspective
      </option>
    </select>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Near : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0.1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Far : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="123.12"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Aspect : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Fovy : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="60"
      />
    </article>
  </article>
</article>
`;

exports[`redo_undo: perspectiveCamera far prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        perspective
      </option>
    </select>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Near : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0.1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Far : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="10.112"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Aspect : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Fovy : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="60"
      />
    </article>
  </article>
</article>
`;

exports[`redo_undo: perspectiveCamera far prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        perspective
      </option>
    </select>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Near : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0.1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Far : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1000"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Aspect : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </article>
  </article>
  <article
    className="wonder-floatInput-base"
  >
    <article
      className="wonder-float-input"
    >
      <span
        className="component-label"
      >
        Fovy : 
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="60"
      />
    </article>
  </article>
</article>
`;
